--- a/modules/ROOT/pages/source/query.adoc
+++ b/modules/ROOT/pages/source/query.adoc
@@ -88,7 +88,7 @@ curl -X POST http://localhost:8083/connectors \
 ----
 
 This will create a Kafka Connect source instance that will send change event messages derived by the provided query over to the `my-topic` topic, using your preferred serialization format.
-In Control Center, confirm that the source connector has been created in the Connect tab, under connect-default.
+In Control Center, confirm that the Source connector has been created in the Connect tab, under connect-default.
 
 Generated change event messages in this case will have the following structure:
 
