--- a/modules/ROOT/partials/create-sink-instance.adoc
+++ b/modules/ROOT/partials/create-sink-instance.adoc
@@ -38,7 +38,7 @@ include::example$docker-data/sink.{strategy}.protobuf.json[]
 
 ====
 
-Let's load the configuration into the Kafka Connect with this REST call:
+Load the configuration into the Kafka Connect with this REST call:
 
 [source,shell,subs="attributes+"]
 ----
