--- a/modules/ROOT/pages/source/cdc.adoc
+++ b/modules/ROOT/pages/source/cdc.adoc
@@ -6,6 +6,10 @@ Please make sure that you take the necessary steps described at link:{page-canon
 
 In order to configure this strategy, you need to define <<patterns, patterns>> and selectors that describe which nodes or relationships you want to track changes and assign them to topics.
 
+[IMPORTANT]
+When a database is restored from a backup in on-prem installations or restored from a snapshot, or paused and resumed in Neo4j Aura, existing change identifiers will no longer work, and you need to re-configure your Source instances from scratch.
+Refer to link:{page-canonical-root}/cdc/current/backup-restore/[Change Data Capture > Restore backups and snapshots] for more information.
+
 == Configuration
 
 First, you need to select CDC strategy for the connector instance;
@@ -54,8 +58,8 @@ Only `pattern` settings are mandatory in the above example, and others are optio
 
 == Creating Source instance
 
-Based on the above example, we can use one of the following configurations.
-Pick one of the following message serialization formats, save the content of the provided file into a local directory, named as source.cdc.neo4j.json.
+Based on the above example, you can use one of the following configurations.
+Pick one of the message serialization format examples and save it as a file named `source.cdc.neo4j.json` into a local directory.
 
 [.tabbed-example]
 ====
@@ -105,7 +109,7 @@ curl -X POST http://localhost:8083/connectors \
 ----
 
 This will create a Kafka Connect source instance that will send change event messages matching the provided selectors over to the `my-topic` topic, using your preferred serialization format.
-In Control Center, confirm that the source connector has been created in the Connect tab, under connect-default.
+In Control Center, confirm that the Source connector has been created in the Connect tab, under connect-default.
 
 [#patterns]
 == Patterns
