Rework usage of Apache name

--- a/modules/ROOT/content-nav.adoc
+++ b/modules/ROOT/content-nav.adoc
@@ -5,7 +5,7 @@
 * *Getting started*
 * xref::installation.adoc[Installation]
 * Quickstart
-** xref::quickstart-docker.adoc[Docker Compose]
+** xref::quickstart-docker.adoc[Confluent Platform]
 ** xref::quickstart-confluent-cloud.adoc[Confluent Cloud]
 // * xref::amazon-msk.adoc[Amazon MSK quickstart]
 
