--- a/modules/ROOT/pages/installation.adoc
+++ b/modules/ROOT/pages/installation.adoc
@@ -1,21 +1,28 @@
 = Installation
 :page-aliases: kafka-connect/installation.adoc
 
-[[distribution]]
+[#distribution]
 == Distribution
 
 The latest version of {product-name} is {exact-connector-version}.
 It is available in two packaging variants.
 
-Confluent Hub Component Archive:: This package can be deployed to Confluent platforms, including Confluent Cloud using their Custom Connectors.
-While this package is available for download at link:{url-confluent-hub-neo4j}[Confluent Hub], it could also be downloaded from link:{url-github}/releases/download/{exact-connector-version}/neo4j-kafka-connect-{exact-connector-version}.zip[here].
+[#confluent-dist]
+=== Neo4j Connector for Confluent
 
-[[uber-jar]]
-Uber JAR:: This package can be deployed to Apache Kafka variants, such as standalone Apache Kafka Connect clusters or Amazon Managed Streaming for Apache Kafka (Amazon MSK).
-This package is available for download from link:{url-github}/releases/download/{exact-connector-version}/neo4j-kafka-connect-{exact-connector-version}.jar[here].
+This package can be deployed to the Confluent Platform as a self-managed connector, and to the Confluent Cloud as a custom connector.
+
+The package is available for download from the link:{url-confluent-hub-neo4j}[Confluent Hub] or from the link:{url-github}/releases/download/{exact-connector-version}/neo4j-kafka-connect-{exact-connector-version}.zip[GitHub repository].
+
+[#jar-dist]
+=== Neo4j Connector for OSS Apache Kafka
+
+This package can be deployed to any Apache Kafka distribution, such as standalone Apache Kafka Connect clusters or Amazon Managed Streaming for Apache Kafka (Amazon MSK).
+
+The package is available for download as a Confluent Hub component archive from the link:{url-github}/releases/download/{exact-connector-version}/neo4j-kafka-connect-{exact-connector-version}.jar[GitHub repository].
 
 == Installation
 
-{product-name} is a plugin designed to be run in an Apache Kafka Connect environment, which is deployed separately from the Neo4j database.
+The {product-name} is a plugin designed to run in an Apache Kafka Connect environment, which is deployed separately from the Neo4j database.
 
-For standalone Kafka Connect installations, download xref:uber-jar[Uber JAR] and copy it into `plugins` directory for each of your Kafka Connect cluster members.
+For standalone Kafka Connect installations, download the xref:jar-dist[self-contained JAR file] and copy it into the `plugins` directory for each of your Kafka Connect cluster members.
