Add various fixes

--- a/modules/ROOT/content-nav.adoc
+++ b/modules/ROOT/content-nav.adoc
@@ -3,7 +3,7 @@
 * xref:whats-new.adoc[]
 
 * *Getting started*
-* xref::installation.adoc[Installation]
+* xref::installation.adoc[]
 * Quickstart
 ** xref::quickstart-docker.adoc[Confluent Platform]
 ** xref::quickstart-confluent-cloud.adoc[Confluent Cloud]
