--- a/modules/ROOT/pages/source/configuration.adoc
+++ b/modules/ROOT/pages/source/configuration.adoc
@@ -50,6 +50,12 @@ One of `SKIP`, `ELEMENT_ID`, `ENTITY_KEYS`, `WHOLE_VALUE`.
 
 Default: `WHOLE_WALUE`
 
+| neo4j.cdc.topic.\{NAME}.value-strategy
+| Serialisation strategy for CDC topic key.
+One of `CHANGE_EVENT`, `ENTITY_EVENT`.
+
+Default: `CHANGE_EVENT`
+
 | neo4j.cdc.poll-duration
 | Maximum amount of time Kafka Connect poll request will wait for a change to be received from the database (valid units are: `ms`, `s`, `m`, `h` and `d`; default unit is `s`)
 
