--- a/modules/ROOT/pages/index.adoc
+++ b/modules/ROOT/pages/index.adoc
@@ -14,18 +14,23 @@ include::partial$experimental.adoc[]
 
 endif::[]
 
-The {product-name} is designed for customers who want to stream data from Apache Kafka (R) topics into Neo4j or Aura, or publish changes occurring in Neo4j or Aura into Apache Kafka (R) topics.
+The {product-name} streams data between Neo4j or Aura databases and platforms based on Apache Kafka(R) using the Kafka Connect framework.
+
+The connector is distributed in two versions:
+
+. The xref:installation.adoc#confluent-dist[Neo4j Connector for Confluent] is available for Confluent Platform(R) and Confluent Cloud(R).
+. The xref:installation.adoc#kafka-dist[Neo4j Connector for Apache Kafka] is available for platforms built on the open-source software (OSS) Apache Kafka(R), including Amazon MSK(R).
 
 == Components
 
 === Sink
 
-The connector provides a sink component, which consumes messages from Apache Kafka topics and applies configured changes into a Neo4j or Aura database.
+The sink component consumes messages from Apache Kafka topics and applies configured changes into a Neo4j or Aura database.
 
 === Source
 
-The connector provides a source component, which listens for changes occurring in a Neo4j or Aura database and publishes messages into Apache Kafka topics.
-Source component can be configured to read changes using link:{page-canonical-root}/cdc[Change Data Capture] feature or a provided custom query.
+The source component listens for changes occurring in a Neo4j or Aura database and publishes messages into Apache Kafka topics.
+It can be configured to read changes using either the link:{page-canonical-root}/cdc[Change Data Capture] feature or a provided custom query.
 
 [IMPORTANT]
 Change Data Capture is a new feature introduced with Neo4j 5.13.0 and Aura 5, and the Source connector with CDC support requires at least these versions of Neo4j and Aura.
@@ -42,7 +47,7 @@ Some features, such as constraints and CDC, are only available with Neo4j Enterp
 
 === Kafka Connect compatibility
 
-The connector is designed to be compatible with versions of Apache Kafka Connect {kafka-connect-version} and later, including, AWS Managed Streaming for Kafka, Confluent Cloud and Platform.
+The connector is designed to be compatible with versions of Apache Kafka Connect {kafka-connect-version} and later, including Confluent Platform, Confluent Cloud, and Amazon MSK.
 
 === Java compatibility
 
@@ -55,7 +60,7 @@ You are free to download, modify, and redistribute the connector; however, Neo4j
 
 == Support
 
-For Neo4j Enterprise and Neo4j AuraDB customers, official releases of this connector deployed into Apache Kafka, Amazon MSK and Confluent Cloud are supported under the terms of your existing Neo4j support agreement.
+For Neo4j Enterprise and Neo4j AuraDB customers, official releases of this connector deployed to Confluent Platform, Confluent Cloud, Apache Kafka, and Amazon MSK are supported under the terms of your existing Neo4j support agreement.
 This support extends only to regular releases and excludes alpha, beta, and pre-releases.
 If you have any questions about the support policy, get in touch with Neo4j.
 
