--- a/modules/ROOT/pages/source/configuration.adoc
+++ b/modules/ROOT/pages/source/configuration.adoc
@@ -56,7 +56,7 @@ One of `CHANGE_EVENT`, `ENTITY_EVENT`.
 
 Default: `CHANGE_EVENT`
 
-Note: If you're using a sink connector with any CDC strategy, the `CHANGE_EVENT` serialisation strategy is required.
+Note: If you're using a sink connector with one of the CDC strategies, this setting must be configured as `CHANGE_EVENT`.
 
 | neo4j.cdc.poll-duration
 | Maximum amount of time Kafka Connect poll request will wait for a change to be received from the database (valid units are: `ms`, `s`, `m`, `h` and `d`; default unit is `s`)
