docs: add migration to content nav

--- a/modules/ROOT/content-nav.adoc
+++ b/modules/ROOT/content-nav.adoc
@@ -1,6 +1,7 @@
 * xref::index.adoc[]
 
 * xref:whats-new.adoc[]
+** xref::how-to-upgrade.adoc[Connector Migration and Upgrade]
 
 * *Getting started*
 * xref::installation.adoc[]
