Add cdc source value serialization types (#48)
* Add cdc source value serialization types

* Add note to specify change_event type required for sink connector

* Add change log entry for 5.1.0

* Remove neo4j.max-retry-attempts

* Update cdc value serialisation note

Co-authored-by: Ali Ince <ali-ince@users.noreply.github.com>

--- a/modules/ROOT/pages/source/configuration.adoc
+++ b/modules/ROOT/pages/source/configuration.adoc
@@ -50,6 +50,14 @@ One of `SKIP`, `ELEMENT_ID`, `ENTITY_KEYS`, `WHOLE_VALUE`.
 
 Default: `WHOLE_WALUE`
 
+| neo4j.cdc.topic.\{NAME}.value-strategy
+| Serialisation strategy for CDC topic key.
+One of `CHANGE_EVENT`, `ENTITY_EVENT`.
+
+Default: `CHANGE_EVENT`
+
+Note: If you're using a sink connector with one of the CDC strategies, this setting must be configured as `CHANGE_EVENT`.
+
 | neo4j.cdc.poll-duration
 | Maximum amount of time Kafka Connect poll request will wait for a change to be received from the database (valid units are: `ms`, `s`, `m`, `h` and `d`; default unit is `s`)
 
