--- a/modules/ROOT/pages/changelog.adoc
+++ b/modules/ROOT/pages/changelog.adoc
@@ -15,7 +15,7 @@ a|
 label:fix[]
 
 Updated the Neo4j driver to mitigate Netty's CVE-2023-34462.
-a| The Neo4j driver has been updated to the latest 4.4.x version (4.4.18), which includes a fix for Netty's https://avd.aquasec.com/nvd/2023/cve-2023-34462/:[CVE-2023-34462].
+a| The Neo4j driver has been updated to the latest 4.4.x version (4.4.18), which includes a fix for Netty's https://avd.aquasec.com/nvd/2023/cve-2023-34462/[CVE-2023-34462].
 
 |===
 
